[gd_scene load_steps=17 format=3 uid="uid://c2apt2qufy5r6"]

[ext_resource type="Script" path="res://Esther/MadameEstherInt.gd" id="1_eyrpf"]
[ext_resource type="Texture2D" uid="uid://dkefg840wn2ev" path="res://Assets/Backgrounds/MadameEsthersBackground0.png" id="2_6e2ho"]
[ext_resource type="Texture2D" uid="uid://buuhvd8lqcww8" path="res://Assets/Backgrounds/MadameEsthersBackground1.png" id="2_h6eyq"]
[ext_resource type="SpriteFrames" uid="uid://bqp3ctdvl3lpr" path="res://Esther/resources/MadameEsther.tres" id="3_lgwd8"]
[ext_resource type="PackedScene" uid="uid://cmbbvtyxdyvd8" path="res://Maps/PixelWorld.tscn" id="3_uf481"]
[ext_resource type="Texture2D" uid="uid://dgodc06s36axk" path="res://Assets/Backgrounds/MadameEsthersShading.png" id="3_yn4ku"]
[ext_resource type="Texture2D" uid="uid://ca1d3obpvse7d" path="res://Assets/Backgrounds/MadameEsthersFrame.png" id="4_dmjq0"]
[ext_resource type="LabelSettings" uid="uid://dnjcx0qlerxl3" path="res://UI/LabelSettingsBigFrame.tres" id="6_apa8s"]
[ext_resource type="StyleBox" uid="uid://c7dnoudvfdag7" path="res://Esther/resources/achievements_panel.tres" id="8_1unnu"]
[ext_resource type="LabelSettings" uid="uid://c2j5clm8mp8ma" path="res://UI/LabelSettings.tres" id="8_frwkg"]
[ext_resource type="Texture2D" uid="uid://c4h3aipo0ok01" path="res://UI/LeftArrow.tres" id="11_lrq5b"]

[sub_resource type="Theme" id="Theme_6mec8"]
default_font_size = 20

[sub_resource type="Animation" id="Animation_dfvx2"]
resource_name = "hide_achievements"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, 250), Vector2(240, -400)]
}

[sub_resource type="Animation" id="Animation_6dryy"]
resource_name = "show_tip"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tips:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tips:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ar8xg"]
resource_name = "view_achievements"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, -400), Vector2(240, 250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82gdm"]
_data = {
"hide_achievements": SubResource("Animation_dfvx2"),
"show_tip": SubResource("Animation_6dryy"),
"view_achievements": SubResource("Animation_ar8xg")
}

[node name="MadameEstherInt" type="ParallaxBackground"]
script = ExtResource("1_eyrpf")

[node name="Background" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("2_6e2ho")
centered = false

[node name="MadameEsther" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(800, 330)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_lgwd8")

[node name="Background1" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background1"]
texture = ExtResource("2_h6eyq")
centered = false

[node name="PixelWorld" parent="." instance=ExtResource("3_uf481")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 218.0
offset_right = 0.0
offset_bottom = 38.0

[node name="Shading" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Shading"]
texture = ExtResource("3_yn4ku")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Frame" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("4_dmjq0")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.999
anchor_bottom = 1.0
offset_right = 0.599854
offset_bottom = 2.0
mouse_filter = 1

[node name="Tips" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.13
anchor_top = 0.225
anchor_right = 0.431
anchor_bottom = 0.449
offset_left = 0.130005
offset_top = 0.0499878
offset_right = -0.169006
offset_bottom = 0.00198364
text = "Hello World!"
label_settings = ExtResource("8_frwkg")
visible_characters = 0
visible_ratio = 0.0

[node name="StreakTracker" type="VBoxContainer" parent="Control"]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.223
anchor_right = 0.859
anchor_bottom = 0.589
offset_left = 0.194031
offset_top = -0.146011
offset_right = -209.541
offset_bottom = -165.278
scale = Vector2(2, 2)
theme_override_constants/separation = 0

[node name="element" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="stage" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="role" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="GamePrompts" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.199
anchor_top = 0.448
anchor_right = 0.804
anchor_bottom = 0.512
offset_left = 0.799011
offset_top = -0.0960083
offset_right = 0.404053
offset_bottom = 0.175964
theme_override_constants/shadow_offset_y = 0
label_settings = ExtResource("6_apa8s")
horizontal_alignment = 1

[node name="LeftButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 227.0
offset_right = 116.0
offset_bottom = 730.0
mouse_filter = 1

[node name="RightButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1470.0
offset_top = 216.0
offset_right = 1557.0
offset_bottom = 735.0
mouse_filter = 1

[node name="Achievements" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.27
anchor_right = 0.83
anchor_bottom = 0.8
offset_left = 0.150009
offset_top = -643.54
offset_right = 0.149902
offset_bottom = -643.537
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("8_1unnu")

[node name="Button" type="TextureButton" parent="Control/Achievements"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.582
anchor_right = 0.623
offset_left = -0.820129
offset_top = -28.0
offset_right = -29.4003
offset_bottom = 4.00003
grow_horizontal = 2
rotation = 1.5708
scale = Vector2(3, 3)
texture_hover = ExtResource("11_lrq5b")

[node name="CenterContainer" type="CenterContainer" parent="Control/Achievements"]
layout_mode = 1
scale = Vector2(3, 3)

[node name="GridContainer" type="GridContainer" parent="Control/Achievements/CenterContainer"]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_6mec8")
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 12
columns = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_82gdm")
}

[node name="CarryOver" type="CanvasLayer" parent="."]
layer = 2

[node name="Nodes" type="Node2D" parent="CarryOver"]
top_level = true
z_index = 1
z_as_relative = false
texture_filter = 1

[node name="Matches" type="Node2D" parent="CarryOver/Nodes"]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="mouse_entered" from="Control/LeftButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/LeftButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="Control/RightButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/RightButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="mouse_entered" from="Control/Achievements/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Achievements/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/Achievements/Button" to="." method="_close_achievements"]
[connection signal="animation_finished" from="Control/AnimationPlayer" to="." method="_on_control_animation_finished"]
